[Change]Output x64 code

--- a/cargo_settings.json
+++ b/cargo_settings.json
@@ -1,11 +1,12 @@
 {
-    "arch": "x86",
+    "arch": "x86_64",
     "":"See http://llvm.org/docs/LangRef.html#data-layout3 to know what data-layout represents.",
-    "data-layout": "e-m:e-p:32:32-f64:32:64-f80:32-n8:16:32-S128",
-    "llvm-target": "i686-unknown-none",
+    "data-layout": "e-m:e-n8:16:32:64-S128",
+    "llvm-target": "x86_64-unknown-none",
+    "executables": true,
     "features": "",
     "target-endian": "little",
-    "target-pointer-width": "32",
+    "target-pointer-width": "64",
     "target-c-int-width": "32",
     "os": "none",
     "code-model": "kernel",
