--- a/cargo_settings.json
+++ b/cargo_settings.json
@@ -4,7 +4,7 @@
     "data-layout": "e-m:e-n8:16:32:64-S128",
     "llvm-target": "x86_64-unknown-none",
     "executables": true,
-    "features": "",
+    "features": "-sse,+soft-float",
     "target-endian": "little",
     "target-pointer-width": "64",
     "target-c-int-width": "32",
