[Add]copy_to_usb rule for Makefile

--- a/boot/Makefile
+++ b/boot/Makefile
@@ -11,5 +11,14 @@ all:$(EFIFILE)
 %.dll:%.c
 	$(CC) $(CFLAGS) $< -o $@
 
+copy_to_usb:$(EFIFILE)
+ifeq ($(USB_DEVICE_PATH),)
+	echo 'Specify device path by $$USB_DEVICE_PATH environment variable.' >&2
+else
+	sudo mount $(USB_DEVICE_PATH) /mnt
+	sudo cp $(EFIFILE) /mnt/efi/boot/
+	sudo umount /mnt
+endif
+
 clean:
 	rm -f $(EFIFILE)
