[Add]Hello world program of uefi

--- a/bootx64/Cargo.toml
+++ b/bootx64/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-uefi = "0.4.6"
+log = "0.4.8"
+uefi = { version = "0.4.6", features = ["logger"] }
 uefi-services = "0.2.4"
