[Add]Test of creating OS image

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,3 +35,6 @@ jobs:
 
     - name: build release version
       run: make release
+
+    - name: Create image file
+      run: make build/ramen_os.img
