--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,6 +23,9 @@ jobs:
         toolchain: nightly
         components: rust-src
         override: true
+    
+    - name: Install rust-src
+      run: rustup component add rust-src
 
     - name: Install dependencies
       run: sudo apt-get install nasm mtools
