--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,10 +18,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install rust nightly
-      uses: actions-rs/toolchain@v1.0.6
-      with:
-        toolchain: nightly
-        override: true
+      run: rustup override set nightly
 
     - name: Install dependencies
       run: sudo apt-get install nasm mtools
