--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,7 +30,7 @@ jobs:
       run: rustup component add rust-src && rustc --print sysroot && ls -R $(rustc --print sysroot)|grep libstd && rustup component list|grep rust-src
 
     - name: Check Cargo.toml
-      run: find $(rustc --print sysroot) -name Cargo.toml
+      run: find $(rustc --print sysroot) -name Cargo.toml|grep libstd
 
     - name: Build debug version
       run: rustup component add rust-src && make
