--- a/.local_vimrc
+++ b/.local_vimrc
@@ -1,4 +1,4 @@
 let g:sysntastic_rust_checkers=['cargo']
-let g:syntastic_rust_cargo_args='xbuild'
+let g:syntastic_rust_cargo_args='build'
 set makeprg=make
 autocmd! vim_test
