--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,10 @@ opt-level = 0
 
 # I don't know why lto = false causes some problems like not print the correct words on the screen.
 lto = true
-panic = "abort"
 
 [profile.release]
 opt-level = 3
 lto = true
-panic = "abort"
 
 [lib]
 name = "ramen_os"
@@ -24,6 +22,7 @@ crate-type = ["staticlib"]
 
 [dependencies]
 spin = "0.5.2"
+rlibc = "1.0.0"
 
 [dependencies.lazy_static]
 version = "1.4.0"
