--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /target
 bootx64/target
+debug/target
 **/*.rs.bk
 Cargo.lock
 tags
@@ -8,12 +9,3 @@ build
 **/*.efi
 *.fd
 *.img
-
-
-#Added by cargo
-#
-#already existing elements are commented out
-
-#/target
-#**/*.rs.bk
-#Cargo.lock
