--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ crate-type = ["staticlib"]
 [dependencies]
 spin = "0.5.2"
 debug = { path = "debug" }
+common_items = { path = "common_items" }
 
 [dependencies.lazy_static]
 version = "1.4.0"
