--- a/common_items/Cargo.toml
+++ b/common_items/Cargo.toml
@@ -3,6 +3,7 @@ name = "common_items"
 version = "0.1.0"
 authors = ["toku-sa-n <tokusan441@gmail.com>"]
 edition = "2018"
+license = "GPL-3.0-or-later"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
