[Refactoring]Rename to common

--- a/bootx64/Cargo.toml
+++ b/bootx64/Cargo.toml
@@ -12,6 +12,6 @@ log = "0.4.8"
 uefi = { version = "0.5.0", features = ["logger"] }
 uefi-services = "0.2.4"
 rlibc = "1.0.0"
-common_items = { path = "../common_items/" }
+common = { path = "../common/" }
 x86_64 = "0.11.2"
 elf_rs = "0.1.3"
