--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -23,6 +23,6 @@ crate-type = ["staticlib"]
 
 [dependencies]
 spin = "0.5.2"
-common_items = { path = "../common_items" }
+common = { path = "../common" }
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 x86_64 = "0.11.2"
