[Add]`once_cell` as a dependency

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -31,3 +31,4 @@ common = { path = "../common" }
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 qemu-exit = "0.1.3"
 x86_64 = "0.11.4"
+once_cell = "1.4.1"
