--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions-rs/toolchain@v1.0.6
         with:
           toolchain: nightly
-          components: clippy
+          components: clippy, rust-src
           override: true
 
       - name: Run clippy for the kernel code
