--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,13 +2,7 @@
 
 name: Test
 
-on:
-  push:
-    branches:
-    - '**'
-  pull_request:
-    branches:
-    - '**'
+on: [push, pull_request]
 
 env:
   CARGO_TERM_COLOR: always
