--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -29,7 +29,7 @@ bench = false
 
 [dependencies]
 common = { path = "../common" }
-conquer_once = { version = "0.2.1", default-features = false }
+conquer-once = { version = "0.2.1", default-features = false }
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 qemu-exit = "0.1.3"
 x86_64 = "0.11.4"
