--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -33,3 +33,4 @@ conquer-once = { version = "0.2.1", default-features = false }
 spinning_top = "0.2.2"
 qemu-exit = "0.1.3"
 x86_64 = "0.11.4"
+linked_list_allocator = "0.8.0"
