--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -35,3 +35,4 @@ qemu-exit = "0.1.3"
 x86_64 = "0.11.4"
 linked_list_allocator = "0.8.0"
 vek = { version = "0.12.0", default-features = false, features = ["libm"] }
+rgb = "0.8.25"
