--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -37,3 +37,4 @@ linked_list_allocator = "0.8.0"
 log = "0.4.11"
 vek = { version = "0.12.0", default-features = false, features = ["libm"] }
 rgb = "0.8.25"
+uefi = "0.5.0"
