--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -30,7 +30,7 @@ bench = false
 [dependencies]
 common = { path = "../common" }
 conquer-once = { version = "0.2.1", default-features = false }
-spinning_top = "0.2.2"
+spinning_top = { version = "0.2.2", features = ["nightly"] }
 qemu-exit = "0.1.3"
 x86_64 = "0.11.4"
 linked_list_allocator = "0.8.0"
