--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -40,3 +40,4 @@ rgb = "0.8.25"
 uefi = "0.5.0"
 crossbeam-queue = { version = "0.2.3", default-features = false, features = ["alloc"] }
 futures-util = { version = "0.3.4", default-features = false, features = ["alloc"] }
+screen_layer = "0.1.0"
