--- a/kernel/cargo_settings.json
+++ b/kernel/cargo_settings.json
@@ -1,7 +1,7 @@
 {
     "arch": "x86_64",
-    "":"See http://llvm.org/docs/LangRef.html#data-layout3 to know what data-layout represents.",
-    "data-layout": "e-m:e-n8:16:32:64-S128",
+    "":"See http://llvm.org/docs/LangRef.html#data-layout to know what data-layout represents.",
+    "data-layout": "e-m:e-i64:64-n8:16:32:64-S128",
     "llvm-target": "x86_64-unknown-none",
     "executables": true,
     "features": "-sse,+soft-float",
