--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -41,3 +41,5 @@ uefi = "0.5.0"
 crossbeam-queue = { version = "0.2.3", default-features = false, features = ["alloc"] }
 futures-util = { version = "0.3.4", default-features = false, features = ["alloc"] }
 screen_layer = "0.1.0"
+proc_macros = { path = "../proc_macros" }
+bit = "0.1.1"
