--- a/proc_macros/Cargo.toml
+++ b/proc_macros/Cargo.toml
@@ -3,7 +3,13 @@ name = "proc_macros"
 version = "0.1.0"
 authors = ["toku-sa-n <tokusan441@gmail.com>"]
 edition = "2018"
+license = "GPL-3.0-or-later"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+proc-macro = true
 
 [dependencies]
+syn = { version = "1.0.41", features = ["full"] }
+quote = "1.0.7"
+Inflector = "0.11.4"
+proc-macro2 = "1.0.21"
