--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -43,3 +43,4 @@ futures-util = { version = "0.3.4", default-features = false, features = ["alloc
 screen_layer = "0.1.0"
 proc_macros = { path = "../proc_macros" }
 bit = "0.1.1"
+os_units = "0.1.1"
