--- a/kernel/.cargo/config.toml
+++ b/kernel/.cargo/config.toml
@@ -1,5 +1,6 @@
 [unstable]
 build-std = ["core", "compiler_builtins", "alloc"]
+build-std-features = ["compiler-builtins-mem"]
 
 [build]
 target = "cargo_settings.json"
