--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -11,3 +11,4 @@ license = "GPL-3.0-or-later"
 uefi = "0.6.0"
 x86_64 = "0.12.0"
 os_units = "0.2.0"
+vek = { version = "0.12.0", default-features = false, features = ["libm"] }
