fix: resolve dead lock
Use future-aware mutex.

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -41,3 +41,4 @@ futures-util = { version = "0.3.4", default-features = false, features = ["alloc
 screen_layer = "0.1.0"
 os_units = "0.2.0"
 bitfield = "0.13.2"
+futures-intrusive = { version = "0.3.1", default-features = false}
