--- a/kernel/.cargo/config.toml
+++ b/kernel/.cargo/config.toml
@@ -3,4 +3,4 @@ build-std = ["core", "compiler_builtins", "alloc"]
 build-std-features = ["compiler-builtins-mem"]
 
 [build]
-target = "cargo_settings.json"
+target = "x86_64-unknown-ramen.json"
