--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -43,3 +43,5 @@ os_units = "0.2.0"
 bitfield = "0.13.2"
 bit_field = "0.10.1"
 futures-intrusive = { version = "0.4.0", default-features = false}
+num-traits = { version = "0.2", default-features = false}
+num-derive = "0.3.3"
