--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -42,6 +42,6 @@ screen_layer = "0.1.0"
 os_units = "0.2.0"
 bitfield = "0.13.2"
 bit_field = "0.10.1"
-futures-intrusive = { version = "0.4.0", default-features = false}
+futures-intrusive = { version = "0.4.0", default-features = false, features = ["alloc"] }
 num-traits = { version = "0.2", default-features = false}
 num-derive = "0.3.3"
