--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -46,3 +46,4 @@ futures-intrusive = { version = "0.4.0", default-features = false, features = ["
 num-traits = { version = "0.2", default-features = false}
 num-derive = "0.3.3"
 acpi = "2.0.0"
+derive_builder = "0.9.0"
