ci: remove duplicated tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,10 +43,6 @@ jobs:
     - name: Copy OVMF_*
       run: cp /usr/share/OVMF/OVMF_* .
 
-    - name: Test on debug mode
+    - name: Test
       timeout-minutes: 5
       run: make test
-
-    - name: Test on release mode
-      timeout-minutes: 5
-      run: make release_test
