--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -41,3 +41,4 @@ num-derive = "0.3.3"
 acpi = "2.2.0"
 derive_builder = "0.9.0"
 syscalls = { path = "../syscalls" }
+tsukemen = { path = "../apps/tsukemen" }
