refactor: create `terminal` crate

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -43,3 +43,4 @@ derive_builder = "0.9.0"
 syscalls = { path = "../syscalls" }
 tsukemen = { path = "../apps/tsukemen" }
 page_box = { path = "../page_box" }
+terminal = { path = "../terminal" }
