--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -44,4 +44,5 @@ syscalls = { path = "../syscalls" }
 tsukemen = { path = "../apps/tsukemen" }
 page_box = { path = "../page_box" }
 terminal = { path = "../terminal" }
-xhci = "0.2.3"
+xhci = "0.2.5"
+accessor = "0.1.0"
