--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -44,5 +44,5 @@ syscalls = { path = "../syscalls" }
 tsukemen = { path = "../apps/tsukemen" }
 page_box = { path = "../page_box" }
 terminal = { path = "../terminal" }
-xhci = "0.4.0"
+xhci = { path = "../../xhci" }
 accessor = "0.3.0"
