--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -40,7 +40,7 @@ num-traits = { version = "0.2.14", default-features = false }
 num-derive = "0.3.3"
 acpi = "2.2.0"
 derive_builder = "0.9.0"
-page_box = { path = "../page_box" }
+page_box = { path = "page_box" }
 terminal = { path = "../terminal" }
 xhci = "0.5.2"
 accessor = "0.3.0"
