--- a/kernel/memory/Cargo.toml
+++ b/kernel/memory/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "page_box"
+name = "memory"
 version = "0.1.0"
 authors = ["toku-sa-n <tokusan441@gmail.com>"]
 edition = "2018"
@@ -7,6 +7,12 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-memory = { path = "../memory" }
+accessor = "0.3.0"
+acpi = "2.2.0"
+bit_field = "0.10.1"
+conquer-once = { version = "0.3.2", default-features = false }
+linked_list_allocator = "0.8.11"
 os_units = "0.2.7"
+spinning_top = "0.2.2"
+uefi = "0.8.0"
 x86_64 = "0.13.2"
