--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -43,4 +43,4 @@ derive_builder = "0.9.0"
 page_box = { path = "page_box" }
 terminal = { path = "../terminal" }
 xhci = "0.5.2"
-accessor = "0.3.0"
+memory = { path = "memory" }
