chore: print logs on the terminal which runs QEMU

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -7,7 +7,7 @@ license = "GPL-3.0-or-later"
 
 [features]
 default = []
-qemu_test = []
+qemu_test = ["terminal/qemu_test"]
 
 [profile.release]
 opt-level = 3
