--- a/terminal/Cargo.toml
+++ b/terminal/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 authors = ["toku-sa-n <tokusan441@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default = []
+qemu_test = []
 
 [dependencies]
 common = { path = "../common" }
@@ -12,4 +14,5 @@ conquer-once = { version = "0.3.2", default-features = false }
 log = "0.4.14"
 rgb = "0.8.25"
 spinning_top = { version = "0.2.2", features = ["nightly"] }
+uart_16550 = "0.2.12"
 vek = { version = "0.14.0", default-features = false, features = ["libm"] }
