--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -45,3 +45,4 @@ page_box = { path = "../page_box" }
 terminal = { path = "../terminal" }
 xhci = "0.5.2"
 accessor = "0.3.0"
+message = { path = "../message" }
