--- a/syscalls/Cargo.toml
+++ b/syscalls/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+message = { path = "../message" }
 num-derive = "0.3.3"
 num-traits = { version = "0.2.14", default-features = false }
 os_units = "0.2.7"
