--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -47,3 +47,4 @@ accessor = "0.3.0"
 message = { path = "../message" }
 bitflags = "1.2.1"
 sysproc = { path = "../sysproc" }
+byteorder = { version = "1.4.2", default-features = false }
