--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,12 +33,12 @@ jobs:
         rustfmt **/*.rs --check
 
     - name: Run clippy
-      run: make clippy
+      run: checkers/run_clippy.sh
 
     - name: Run udeps
       run: |
         cargo install cargo-udeps
-        make udeps
+        checkers/detect_unused_dependencies.sh
 
     - name: Install dependencies
       run: |
