--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,12 +9,10 @@ env:
   RUSTFLAGS: -D warnings
 
 jobs:
-  install_dependencies:
+  fmt:
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        shell: bash
+    needs: install_dependencies
 
     steps:
     - uses: actions/checkout@v2
@@ -23,20 +21,9 @@ jobs:
       uses: actions-rs/toolchain@v1.0.6
       with:
         toolchain: nightly
-        components: clippy, rustfmt, rust-src
+        components: rustfmt, rust-src
         override: true
 
-    - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install nasm mtools qemu-system-x86 ovmf
-
-  fmt:
-    runs-on: ubuntu-latest
-
-    needs: install_dependencies
-
-    steps:
     - name: Run rustfmt with check mode
       run: |
         shopt -s globstar
@@ -48,6 +35,15 @@ jobs:
     needs: install_dependencies
 
     steps:
+    - uses: actions/checkout@v2
+
+    - name: Install rust nightly
+      uses: actions-rs/toolchain@v1.0.6
+      with:
+        toolchain: nightly
+        components: clippy, rust-src
+        override: true
+
     - name: Run clippy
       run: checkers/run_clippy.sh
 
@@ -57,6 +53,15 @@ jobs:
     needs: install_dependencies
 
     steps:
+    - uses: actions/checkout@v2
+
+    - name: Install rust nightly
+      uses: actions-rs/toolchain@v1.0.6
+      with:
+        toolchain: nightly
+        components: rust-src
+        override: true
+
     - name: Run udeps
       run: |
         cargo install cargo-udeps
@@ -68,6 +73,20 @@ jobs:
     needs: install_dependencies
 
     steps:
+    - uses: actions/checkout@v2
+
+    - name: Install rust nightly
+      uses: actions-rs/toolchain@v1.0.6
+      with:
+        toolchain: nightly
+        components: rust-src
+        override: true
+
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install mtools qemu-system-x86 ovmf
+
     - name: Copy OVMF_*
       run: cp /usr/share/OVMF/OVMF_* .
 
