fix: forgot to fix the `bors.toml` file

--- a/bors.toml
+++ b/bors.toml
@@ -1,2 +1,2 @@
-status = ["install_dependencies", "fmt", "clippy", "udeps", "test"]
+status = ["fmt", "clippy", "udeps", "test"]
 delete_merged_branches = true
