--- a/bootx64/Cargo.toml
+++ b/bootx64/Cargo.toml
@@ -5,7 +5,9 @@ authors = ["toku-sa-n <tokusan441@gmail.com>"]
 edition = "2018"
 license = "GPL-3.0-or-later"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+test = false
+bench = false
 
 [dependencies]
 log = "0.4.14"
