fix: forgot to set the settings of a library

--- a/bootx64/Cargo.toml
+++ b/bootx64/Cargo.toml
@@ -10,6 +10,10 @@ name = "bootx64"
 test = false
 bench = false
 
+[lib]
+test = false
+bench = false
+
 [dependencies]
 log = "0.4.14"
 uefi = { version = "0.8.0", features = ["logger"] }
