refactor: create the `frame_manager` crate
To test the frame manager. It is not possible to do tests in the
`kernel` crate because custom targets do not have their own `std`
crates.

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -48,3 +48,4 @@ message = { path = "../message" }
 bitflags = "1.2.1"
 byteorder = { version = "1.4.3", default-features = false }
 port_server = { path = "../port_server" }
+frame_manager = { path = "../frame_manager" }
