feat: append the initrd file to the kernel

--- a/example_server/Cargo.toml
+++ b/example_server/Cargo.toml
@@ -3,7 +3,12 @@ name = "example_server"
 version = "0.1.0"
 authors = ["toku-sa-n <tokusan441@gmail.com>"]
 edition = "2018"
+license = "GPL-3.0-or-later"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "example_server"
+crate-type = ["staticlib"]
+test = false
+bench = false
 
 [dependencies]
