--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -49,3 +49,6 @@ bitflags = "1.2.1"
 byteorder = { version = "1.4.3", default-features = false }
 port_server = { path = "../port_server" }
 frame_manager = { path = "../frame_manager" }
+
+[build-dependencies]
+cc = "1.0.67"
