--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -49,6 +49,7 @@ bitflags = "1.2.1"
 byteorder = { version = "1.4.3", default-features = false }
 port_server = { path = "../port_server" }
 frame_manager = { path = "../frame_manager" }
+cstr_core = "0.2.3"
 
 [build-dependencies]
 cc = "1.0.67"
