--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -50,6 +50,7 @@ byteorder = { version = "1.4.3", default-features = false }
 port_server = { path = "../port_server" }
 frame_manager = { path = "../frame_manager" }
 cstr_core = "0.2.3"
+pm = { path = "../pm" }
 
 [build-dependencies]
 cc = "1.0.67"
