--- a/pm/Cargo.toml
+++ b/pm/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+message = { path = "../message" }
+num-traits = { version = "0.2.14", default-features = false }
 syscalls = { path = "../syscalls" }
