chore: rename `fs` to `fs_server`
`fs` is used as a module name in the `kernel` crate.

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -51,6 +51,7 @@ port_server = { path = "../port_server" }
 frame_manager = { path = "../frame_manager" }
 cstr_core = "0.2.3"
 pm = { path = "../pm" }
+fs_server = { path = "../fs_server" }
 
 [build-dependencies]
 cc = "1.0.67"
