--- a/pm/Cargo.toml
+++ b/pm/Cargo.toml
@@ -4,9 +4,14 @@ version = "0.1.0"
 authors = ["toku-sa-n <tokusan441@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "pm"
+crate-type = ["staticlib"]
+test = false
+bench = false
 
 [dependencies]
 message = { path = "../message" }
 num-traits = { version = "0.2.14", default-features = false }
+ralib = { path = "../ralib" }
 syscalls = { path = "../syscalls" }
