--- a/ralib/Cargo.toml
+++ b/ralib/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-conquer-once = "0.3.2"
+conquer-once = { version = "0.3.2", default-features = false }
 linked_list_allocator = "0.8.11"
 os_units = "0.3.0"
 page_box = { path = "../page_box" }
