--- a/ralib/Cargo.toml
+++ b/ralib/Cargo.toml
@@ -14,4 +14,5 @@ conquer-once = { version = "0.3.2", default-features = false }
 linked_list_allocator = "0.8.11"
 os_units = "0.3.0"
 page_box = { path = "../page_box" }
+syscalls = { path = "../syscalls" }
 x86_64 = "0.13.4"
