--- a/port_server/Cargo.toml
+++ b/port_server/Cargo.toml
@@ -4,12 +4,17 @@ version = "0.1.0"
 authors = ["toku-sa-n <tokusan441@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "port_server"
+crate-type = ["staticlib"]
+test = false
+bench = false
 
 [dependencies]
 log = "0.4.14"
 message = { path = "../message" }
 num-derive = "0.3.3"
 num-traits = { version = "0.2.14", default-features = false }
+ralib = { path = "../ralib" }
 syscalls = { path = "../syscalls" }
 x86_64 = "0.14.0"
