Revert "Revert "feat: implement logging feature for `ralib` (#850)" (#855)"
This reverts commit d27d59130cc34281462b9fd3da11d6fb1ec656ed.

--- a/ralib/Cargo.toml
+++ b/ralib/Cargo.toml
@@ -13,6 +13,7 @@ bench = false
 conquer-once = { version = "0.3.2", default-features = false }
 linked_list_allocator = "0.8.11"
 os_units = "0.3.1"
+log = "0.4.14"
 page_box = { path = "../page_box" }
 syscalls = { path = "../syscalls" }
 x86_64 = "0.14.0"
