--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ on: [push, pull_request]
 
 env:
   CARGO_TERM_COLOR: always
-  RUSTFLAGS: -D warnings -D absolute_paths_not_starting_with_crate
+  RUSTFLAGS: -D warnings -D absolute_paths_not_starting_with_crate -D box_pointers
 
 jobs:
   fmt:
