--- a/fs_server/Cargo.toml
+++ b/fs_server/Cargo.toml
@@ -4,9 +4,14 @@ version = "0.1.0"
 authors = ["toku-sa-n <tokusan441@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "fs_server"
+crate-type = ["staticlib"]
+test = false
+bench = false
 
 [dependencies]
 log = "0.4.14"
 message = { path = "../message" }
+ralib = { path = "../ralib" }
 syscalls = { path = "../syscalls" }
