--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -50,6 +50,7 @@ byteorder = { version = "1.4.3", default-features = false }
 frame_manager = { path = "../frame_manager" }
 cstr_core = "0.2.3"
 xmas-elf = "0.7.0"
+uart_16550 = "0.2.12"
 
 [build-dependencies]
 cc = "1.0.67"
