--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -44,6 +44,7 @@ bitflags = "1.2.1"
 frame_manager = { path = "../frame_manager" }
 cstr_core = "0.2.3"
 xmas-elf = "0.7.0"
+uart_16550 = "0.2.12"
 
 [build-dependencies]
 cc = "1.0.67"
