ci: track the dependencies of the `xhci` crate

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -119,3 +119,12 @@ updates:
   allow:
   - dependency-type: direct
   - dependency-type: indirect
+- package-ecosystem: cargo
+  directory: "/xhci"
+  schedule:
+    interval: daily
+    time: "20:00"
+  open-pull-requests-limit: 10
+  allow:
+  - dependency-type: direct
+  - dependency-type: indirect
