--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -10,5 +10,6 @@ license = "GPL-3.0-or-later"
 [dependencies]
 uefi = "0.8.0"
 x86_64 = "0.14.0"
-os_units = "0.3.1"
+os_units = "0.4.0"
 vek = { version = "0.15.0", default-features = false, features = ["libm"] }
+conquer-once = { version = "0.3.2", default-features = false }
