chore(ralib): disable default features of `x86_64`

--- a/ralib/Cargo.toml
+++ b/ralib/Cargo.toml
@@ -16,5 +16,5 @@ os_units = "0.4.0"
 log = "0.4.14"
 page_box = { path = "../page_box" }
 syscalls = { path = "../syscalls" }
-x86_64 = "0.14.0"
+x86_64 = { version = "0.14.1", default-features = false }
 accessor = "0.3.0"
