--- a/syscalls/Cargo.toml
+++ b/syscalls/Cargo.toml
@@ -12,3 +12,6 @@ num-derive = "0.3.3"
 num-traits = { version = "0.2.14", default-features = false }
 os_units = "0.4.0"
 x86_64 = "0.14.1"
+
+[build-dependencies]
+cc = "1.0.67"
