--- a/syscalls/Cargo.toml
+++ b/syscalls/Cargo.toml
@@ -9,7 +9,7 @@ message = { path = "../message" }
 num-derive = "0.3.3"
 num-traits = { version = "0.2.14", default-features = false }
 os_units = "0.4.0"
-x86_64 = "0.14.1"
+x86_64 = { version = "0.14.1", default-features = false }
 
 [build-dependencies]
 cc = "1.0.67"
