--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -23,7 +23,7 @@ bench = false
 common = { path = "../common" }
 conquer-once = { version = "0.3.2", default-features = false }
 spinning_top = { version = "0.2.3", features = ["nightly"] }
-x86_64 = "0.14.1"
+x86_64 = { version = "0.14.1", default-features = false }
 linked_list_allocator = "0.9.0"
 log = "0.4.14"
 vek = { version = "0.15.0", default-features = false, features = ["libm"] }
