--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -5,11 +5,9 @@ authors = ["toku-sa-n <tokusan441@gmail.com>"]
 edition = "2018"
 license = "GPL-3.0-or-later"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+x86_64 = { version = "0.14.1", default-features = false }
 uefi = "0.9.0"
-x86_64 = "0.14.1"
 os_units = "0.4.0"
 vek = { version = "0.15.0", default-features = false, features = ["libm"] }
 conquer-once = { version = "0.3.2", default-features = false }
