--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -22,9 +22,8 @@ bench = false
 [dependencies]
 common = { path = "../common" }
 conquer-once = { version = "0.3.2", default-features = false }
-spinning_top = { version = "0.2.3", features = ["nightly"] }
-qemu-exit = "2.0.0"
-x86_64 = "0.14.1"
+spinning_top = "0.2.3"
+x86_64 = { version = "0.14.1", default-features = false }
 linked_list_allocator = "0.9.0"
 log = "0.4.14"
 vek = { version = "0.15.0", default-features = false, features = ["libm"] }
