--- a/ralib/Cargo.toml
+++ b/ralib/Cargo.toml
@@ -9,6 +9,10 @@ name = "ralib"
 test = false
 bench = false
 
+[features]
+default = ["heap"]
+heap = []
+
 [dependencies]
 conquer-once = { version = "0.3.2", default-features = false }
 linked_list_allocator = "0.9.0"
