chore: link to `ralib` without enabling the `heap` feature

--- a/fm/Cargo.toml
+++ b/fm/Cargo.toml
@@ -8,3 +8,6 @@ name = "fm"
 crate-type = ["staticlib"]
 test = false
 bench = false
+
+[dependencies]
+ralib = { path = "../ralib", default-features = false }
