--- a/fm/Cargo.toml
+++ b/fm/Cargo.toml
@@ -10,4 +10,5 @@ test = false
 bench = false
 
 [dependencies]
+linked_list_allocator = "0.9.0"
 ralib = { path = "../ralib", default-features = false }
