--- a/fm/Cargo.toml
+++ b/fm/Cargo.toml
@@ -10,5 +10,7 @@ test = false
 bench = false
 
 [dependencies]
+fm_message = { path = "../fm_message" }
 linked_list_allocator = "0.9.0"
 ralib = { path = "../ralib", default-features = false }
+syscalls = { path = "../syscalls" }
