--- a/fm/Cargo.toml
+++ b/fm/Cargo.toml
@@ -10,7 +10,13 @@ test = false
 bench = false
 
 [dependencies]
+conquer-once = { version = "0.3.2", default-features = false }
 fm_message = { path = "../fm_message" }
+frame_manager = { path = "../frame_manager" }
 linked_list_allocator = "0.9.0"
+message = { path = "../message" }
+os_units = "0.4.0"
 ralib = { path = "../ralib", default-features = false }
+spinning_top = "0.2.4"
 syscalls = { path = "../syscalls" }
+x86_64 = { version = "0.14.2", default-features = false }
