--- a/vm/Cargo.toml
+++ b/vm/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+linked_list_allocator = "0.9.0"
+ralib = { path = "../ralib", default-features = false }
