--- a/vm/Cargo.toml
+++ b/vm/Cargo.toml
@@ -3,7 +3,11 @@ name = "vm"
 version = "0.1.0"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "vm"
+crate-type = ["staticlib"]
+test = false
+bench = false
 
 [dependencies]
 linked_list_allocator = "0.9.0"
