--- a/x86_64-unknown-ramen.json
+++ b/x86_64-unknown-ramen.json
@@ -1,6 +1,5 @@
 {
     "arch": "x86_64",
-    "":"See http://llvm.org/docs/LangRef.html#data-layout to know what data-layout represents.",
     "data-layout": "e-m:e-i64:64-n8:16:32:64-S128",
     "llvm-target": "x86_64-unknown-none",
     "executables": true,
@@ -12,11 +11,8 @@
     "code-model": "kernel",
     "relocation-model": "static",
     "archive-format": "gnu",
-    "target-env": "gnu",
-    "no-compiler-rt": false,
     "panic-strategy": "abort",
     "linker-flavor": "ld",
     "linker-is-gnu": true,
-    "disable-redzone": true,
-    "eliminate-frame-pointer": false
+    "disable-redzone": true
 }
